--- a/style.css
+++ b/style.css
@@ -136,8 +136,6 @@ font-family: 'Pixelify Sans', cursive;
   .drawh {
     width: 70%;
     height: 70%;
-    margin-left: auto;
-    margin-right: auto;
     object-fit: contain;
   }
   
@@ -152,6 +150,11 @@ font-family: 'Pixelify Sans', cursive;
   #processImg{
     position: absolute;
     left: 20%;
+  }
+
+  #processImg img {
+    width: 80%;
+    height: 80%;
   }
   
   .gameText{
@@ -177,7 +180,7 @@ font-family: 'Pixelify Sans', cursive;
   }
 
 
-  @media only screen and (max-device-width: 2000px) {
+  @media only screen and (max-device-width: 500px) {
    body{
     background-color: red;
    }
@@ -189,7 +192,6 @@ font-family: 'Pixelify Sans', cursive;
    #navbar{
     position: absolute;
     top: 5%;
-    left: 40%;
   }
 
   #workContent, #nameContent, #workeContent, #resumeContent, #aboutContent{
@@ -206,7 +208,37 @@ font-family: 'Pixelify Sans', cursive;
     overflow: scroll;
 }
   
+#worke{
+    display: block;
+  }
  
+  #nameIcon, #aboutIcon, #gamesIcon{
+    position: relative;
+    left: 50%;
+  }
+
+  #digIcon{
+    position: absolute;
+    top: 10%;
+    left: 200%;
+  }
+
+  #photoIcon{
+    position: absolute;
+    top: 40%;
+    left: 200%;
+  }
+
+  .imagesss img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .gameText{
+    background-color: rgba(220, 78, 220);
+    box-shadow: 0px 0px 35px 35px rgb(220, 78, 220); 
+    width: 80%;
+  }
   
 
   }
