--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Almendra', serif;
 font-family: 'Pixelify Sans', cursive;
+background-color: hotpink;
 }
 
 .images {
@@ -27,7 +28,7 @@ font-family: 'Pixelify Sans', cursive;
   
   .images p {
     display: inline-block;
-    padding: 2%;
+    
     margin-top: 5px;
     font-size: 12pt;
   }
@@ -93,6 +94,14 @@ font-family: 'Pixelify Sans', cursive;
     width: 50%;
     top: 20%;
     left: 35%;
+    overflow: scroll;
+  }
+
+  #blankContent{
+    position: relative;
+    top: 150%;
+    height: 50%;
+    
   }
   
   #nameContent{
@@ -182,7 +191,8 @@ font-family: 'Pixelify Sans', cursive;
 
   @media only screen and (max-device-width: 500px) {
    body{
-    background-color: red;
+        background-image: url("images/glitter-butterfly.gif");
+        background-repeat: repeat;
    }
 
    .image-container{
@@ -194,20 +204,36 @@ font-family: 'Pixelify Sans', cursive;
     top: 5%;
   }
 
+  .drawHot {
+    position: relative;
+    left: 2%;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
   #workContent, #nameContent, #workeContent, #resumeContent, #aboutContent{
-  
-    
     position: absolute;
-    top: 8%;
-    left: 6%;
-    width: 82%;
+    top: 4%;
+    left: 10%;
+    width: 72%;
     height: 80%;
-    padding: 3%;
+    padding: 1%;
     background-color: rgb(220, 78, 220);
     box-shadow: 0px 0px 35px 35px rgb(220, 78, 220); 
     overflow: scroll;
 }
-  
+.gameText{
+    background-color: rgba(220, 78, 220);
+    box-shadow: 0px 0px 35px 35px rgb(220, 78, 220); 
+    width: 40%;
+    position: relative;
+    margin-left: auto;
+    left: 1%;
+    margin-right: auto;
+    text-align: center;
+  }
+
 #worke{
     display: block;
   }
@@ -231,13 +257,17 @@ font-family: 'Pixelify Sans', cursive;
 
   .imagesss img {
     width: 100%;
-    height: 100%;
+    height: 70%;
   }
 
   .gameText{
     background-color: rgba(220, 78, 220);
     box-shadow: 0px 0px 35px 35px rgb(220, 78, 220); 
     width: 80%;
+  }
+
+  #secondLLL{
+    display:none;
   }
   
 
