--- a/style.css
+++ b/style.css
@@ -118,23 +118,30 @@ background-color: white;
     width: fit-content;
   }
   
-  
+  #closeImage{
+    position: absolute;
+    top: -5%;
+    left: 2%;
+    font-size: xx-large;
+  }
+
   .popup {
     display: none;
     position: absolute;
-    background-color: rgba(220, 78, 220, 0.7);
+    background-color: rgba(220, 78, 220, .7);
+    box-shadow: 10px 10px 35px 35px rgb(220, 78, 220, .7); 
     top: 0;
     left: 0;
-    width: 50%;
-    height: 50%;
+    width: 70%;
+    height: 70%;
     justify-content: center;
     align-items: center;
     z-index: 999;
   }
   
   .popup img {
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 100%;
+    max-height: 100%;
   }
   
   .popup.active {
@@ -188,10 +195,16 @@ background-color: white;
     width: fit-content;
   }
 
+  .navIcon img {
+    width: 70px;
+  }
+
 
   @media only screen and (max-device-width: 500px) {
    body{
         background-color: white;
+        background-image: url("images/glitter-butterfly.gif");
+background-repeat: repeat;
    }
 
    .image-container{
@@ -251,6 +264,12 @@ background-color: white;
   #photoIcon{
     position: absolute;
     top: 40%;
+    left: 200%;
+  }
+
+  #cvIcon{
+    position: absolute;
+    top: 70%;
     left: 200%;
   }
 
