--- a/style.css
+++ b/style.css
@@ -132,8 +132,8 @@ background-color: white;
     box-shadow: 10px 10px 35px 35px rgb(220, 78, 220, .7); 
     top: 0;
     left: 0;
-    width: 70%;
-    height: 70%;
+    width: 30%;
+    height: 50%;
     justify-content: center;
     align-items: center;
     z-index: 999;
@@ -184,7 +184,10 @@ background-color: white;
     text-align: center;
   }
   
-  
+  .spacer {
+    display: block; 
+    margin-bottom: 100px; 
+  }
  
 
   .navIcon{
@@ -199,6 +202,56 @@ background-color: white;
     width: 70px;
   }
 
+  .slideshow-container {
+    position: relative;
+    left: 5%;
+    max-width: 600px;
+    height: 400px;
+    margin: auto;
+    overflow: hidden;
+    border: 2px solid #ccc;
+  }
+  
+  /* Hide all slides by default */
+  .slide {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+  
+  /* Images inside the slides */
+  .slideshow-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the images fit within the container without distortion */
+  }
+  
+  /* Navigation buttons */
+  .prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    font-size: 18px;
+    padding: 16px;
+    cursor: pointer;
+    user-select: none;
+  }
+  
+  .prev {
+    left: 0;
+  }
+  
+  .next {
+    right: 0;
+  }
+  
+  /* Button hover effect */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
 
   @media only screen and (max-device-width: 500px) {
    body{
@@ -275,7 +328,7 @@ background-repeat: repeat;
 
   .imagesss img {
     width: 100%;
-    height: 70%;
+    height: 100%;
   }
 
   .gameText{
@@ -283,10 +336,12 @@ background-repeat: repeat;
     box-shadow: 0px 0px 35px 35px rgb(220, 78, 220); 
     width: 80%;
   }
-
-  #secondLLL{
-    display:none;
+  .drawh {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
+  
   
 
   }
